--- a/wp-content/themes/carnes-crossroads-2015/scss/_property-view.scss
+++ b/wp-content/themes/carnes-crossroads-2015/scss/_property-view.scss
@@ -152,6 +152,7 @@
 
         .share-widget {
             position: absolute;
+            visibility: hidden;
             background: #8b8b8b;
             top: -70px;
             left: -50px;
@@ -164,6 +165,7 @@
             @include transition(.3s all);
 
             &.open {
+                visibility: visible;
                 opacity: 1;
                 top: -80px;
             }
